# PeteRental_vapi_10_02_25

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FIX_CALENDAR_QUICK.md  PROJECT_MASTER.md  README.md  RENDER_DEPLOYMENT.md  VAPI_SETUP.md  auth_wizard.py  authorize_calendar.py  check_vapi_calls.py  deploy.sh  deploy_docker.sh  docker-compose.yml  docker_build_push.sh  docker_hub_deploy.sh  fix_vapi_response.py  fix_vapi_template_final.py  langchain_rental_scraper.py  main.py  playwright_scraper.py  pyproject.toml  quick_test.sh  recreate_vapi_tools.sh  render.yaml  rental_data.json  rental_database.py  run_migrations.py  setup_github_secrets.sh  start_dev.sh  start_prod.sh  start_scheduler.py  test_agent_system.py  test_calendar_endpoints.py  test_calendar_vapi.py  test_migrations.py  test_production_webhook.py  test_webhook.py  update_vapi_functions.py  (+3 more)
.github/workflows/: docker-build-deploy.yml  test.yml
DEV_MAN/: ARCHITECTURE.md  BEHAVIOR_ANALYSIS.md  CALENDAR_INTEGRATION_APP_PLAN.md  CICD_DOCKER_PIPELINE_APP_PLAN.md  COMPLETE_SYSTEM_ANALYSIS.md  DEPLOYMENT_PIPELINE.md  DEVMAN_DASHBOARD_APP_PLAN.md  EXECUTIVE_SUMMARY.md  NEXTJS_FRONTEND_APP_PLAN.md  README.md  WORKFLOW_SUMMARY.md  system_overview.md  troubleshooting.md
DEV_MAN/deployment/: RENDER_ENV_VARS.md
_deprecated/: .claudeDiscoverPlan.md  README.md  attach_tools_final.py  attach_tools_to_assistant.py  check_assistant_config.py  create_vapi_functions.py  fix_for_current_production.py  update_vapi_user.py  verify_vapi_config.py
migrations/: 001_create_agent_tables.sql  002_add_user_authentication.sql
(+33 files in other folders)
